# GhoulDusters

./: .gitignore  CMakeLists.txt  LICENSE  README.md
res/bitmaps/: GB-Classic.gpl  GB-Modern.gpl  germz.gpl
res/maps/: City-Sheet.json  City-Sheet.tsx  City-Sheet8x.json  City-Sheet8x.tsx  City.json  City.tmx  City.tsx  City8xts.json  CityMap1.tsx  Drive.tmx  Ghostbusters.gpl  Road.c  Road.tmx  city16x.c  city16x.h  city8x..lua  city8x.c  city8x.csv  city8x.h  city8x.js  city8x.json  city8x.tmx
res/spritesheet/: Ghostbusters.gpl  Sprite-0001.aseprite  Sprite-0003.aseprite  Sprite-0004.aseprite  Sprite-0005.aseprite
src/: assets.c  assets.h  bob_new.c  bob_new.h  capture.h  driving.c  driving.h  gamestate.c  gamestate.h  ghost.c  ghost.h  ghostbusters.c  ghostbusters.h  hud.c  hud.h  loading.c  loading.h  misc.c  misc.h  password.c  player.c  player.h  tilemap.c  tilemap.h  titlescreen.c  titlescreen.h  town.c  town.h  wanderer.c  wanderer.h
src/json/: json.c  json.h
src/maps/: city16x.c  city16x.h  city8x.c  city8x.h  road.c  road.h
